--- a/.github/workflows/generate-fund-plots.yaml
+++ b/.github/workflows/generate-fund-plots.yaml
@@ -33,21 +33,27 @@ jobs:
       run: |
         python3 bin/interactive_fund_plot.py -t tables -r :internal: > results/fund_series_charts.stdout.html 2>/dev/null
 
+    - name: Run fund scores generation script
+      run: |
+        python3 bin/interactive_fund_plot.py --bar -t tables -r :internal: > results/fund_series_scores.stdout.html 2>/dev/null
+
     - name: Copy to GitHub Pages docs directory
       run: |
         mkdir -p docs
         cp results/fund_series_charts.stdout.html docs/latest_fund_series_charts.html
+        cp results/fund_series_scores.stdout.html docs/latest_fund_series_scores.html
 
     - name: Commit and push if changed
       run: |
         git config --global user.name "github-actions"
         git config --global user.email "github-actions@github.com"
         git add results/fund_series_charts.stdout.html docs/latest_fund_series_charts.html
+        git add results/fund_series_scores.stdout.html docs/latest_fund_series_scores.html
 
         if git diff --cached --quiet; then
           echo "No changes to commit"
         else
-          git commit -m "Update fund chart HTML for $(date +%F)"
+          git commit -m "Update fund chart and scores HTML for $(date +%F)"
           git push
         fi
 
@@ -60,17 +66,19 @@ jobs:
       with:
         tag_name: ${{ steps.get_date.outputs.date_tag }}
         name: "Fund Charts - ${{ steps.get_date.outputs.date_tag }}"
-        body: "Auto-generated fund chart for ${{ steps.get_date.outputs.date_tag }}."
+        body: "Auto-generated fund chart and scores for ${{ steps.get_date.outputs.date_tag }}."
         draft: false
         prerelease: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Upload HTML as release asset
+    - name: Upload HTML as release assets
       uses: softprops/action-gh-release@v1
       with:
         tag_name: ${{ steps.get_date.outputs.date_tag }}
-        files: results/fund_series_charts.stdout.html
+        files: |
+          results/fund_series_charts.stdout.html
+          results/fund_series_scores.stdout.html
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -83,16 +91,17 @@ jobs:
         git clone git@github.com:famantic-net/fundrider-pages.git ../fundrider-pages
 
         cp results/fund_series_charts.stdout.html ../fundrider-pages/docs/latest_fund_series_charts.html
+        cp results/fund_series_scores.stdout.html ../fundrider-pages/docs/latest_fund_series_scores.html
 
         cd ../fundrider-pages
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
-        git add docs/latest_fund_series_charts.html
+        git add docs/latest_fund_series_charts.html docs/latest_fund_series_scores.html
 
         if git diff --cached --quiet; then
           echo "No changes to publish"
         else
-          git commit -m "Update chart for $(date +%F)"
+          git commit -m "Update charts and scores for $(date +%F)"
           git push
         fi
       env:
