Added Perl zip archive module to slicing workflow

--- a/.github/workflows/slice-fund-files.yaml
+++ b/.github/workflows/slice-fund-files.yaml
@@ -23,7 +23,8 @@ jobs:
         cpanm --sudo --notest \
           YAML::PP \
           String::Similarity \
-          Date::Calc
+          Date::Calc \
+          Archive::Zip
 
     - name: Run Perl script
       run: |
