--- a/.github/workflows/generate-fund-plots.yaml
+++ b/.github/workflows/generate-fund-plots.yaml
@@ -91,14 +91,22 @@ jobs:
         export GIT_SSH_COMMAND="ssh -i /tmp/deploy_key -o StrictHostKeyChecking=no"
         git clone git@github.com:famantic-net/fundrider-pages.git ../fundrider-pages
 
-        cp tables/fund_tables.zip ../fundrider-pages/fund_tables.zip
+        cp tables/fund_tables.zip ../fundrider-pages/tables/fund_tables.zip
+        cp tables/fund_tables_*.csv ../fundrider-pages/
         cp results/fund_series_charts.stdout.html ../fundrider-pages/docs/latest_fund_series_charts.html
         cp results/fund_series_scores.stdout.html ../fundrider-pages/docs/latest_fund_series_scores.html
+
+        cd ../fundrider-pages/docs/tables
+        echo '<!DOCTYPE html><html><head><meta charset="UTF-8"><title>Available Tables</title></head><body><h1>Available CSV Tables</h1><ul>' > index.html
+        for file in *.csv; do
+          echo "<li><a href=\"$file\">$file</a></li>" >> index.html
+        done
+        echo '</ul></body></html>' >> index.html
 
         cd ../fundrider-pages
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
-        git add fund_tables.zip docs/latest_fund_series_charts.html docs/latest_fund_series_scores.html
+        git add docs/latest_fund_series_charts.html docs/latest_fund_series_scores.html docs/tables/fund_tables.zip docs/tables/fund_tables_*.csv docs/tables/index.html
 
         if git diff --cached --quiet; then
           echo "No changes to publish"
